--- a/Flubber/sample/src/main/res/layout/activity_main.xml
+++ b/Flubber/sample/src/main/res/layout/activity_main.xml
@@ -19,26 +19,6 @@
         android:layout_height="match_parent"
         tools:context="com.appolica.sample.ui.main.MainActivity">
 
-        <TextView
-            android:id="@+id/text"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:background="@color/colorPrimary"
-            android:gravity="center"
-            android:padding="20dp"
-            android:text="@string/flubber"
-            android:textColor="@android:color/white"
-            android:onClick="@{(view) -> clickListener.onViewClick(view)}"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/textView"
-            android:layout_marginBottom="8dp"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/floatingActionButton"
@@ -49,31 +29,41 @@
             android:layout_marginRight="24dp"
             android:clickable="true"
             android:src="@drawable/ic_add_white_48dp"
+            android:onClick="@{() -> clickListener.onAddClick()}"
             app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView"
+        <FrameLayout
+            android:id="@+id/fragmentContainer"
             android:layout_width="0dp"
-            android:layout_height="250dp"
+            android:layout_height="300dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent">
+
+        </FrameLayout>
 
         <TextView
-            android:text="Animations"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+            android:id="@+id/text"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_marginBottom="8dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+            android:layout_marginEnd="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/colorPrimary"
+            android:gravity="center"
+            android:onClick="@{(view) -> clickListener.onViewClick(view)}"
+            android:padding="20dp"
+            android:text="@string/flubber"
+            android:textColor="@android:color/white"
+            app:layout_constraintBottom_toTopOf="@+id/fragmentContainer"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
     </android.support.constraint.ConstraintLayout>
 </layout>
