Edit: The app is in a single activity. Edit: Two panels are being switched between each other by the user. The main panel is to show all added animations, the editor panel is for creating/editing an animation.  Edit: The FAB starts a reveal animation, after which, the editor panel is being shown.  Add: Fragments for all pages in editor panel ViewPager.  Add: Adapters for the view pager and the recycler views.  Add: EditorFragmentType.java - provides all the fragments for the viewpager  Add: OnAnimationSelectedListener.java and OnInterpolatorSelectedListener.java - listeners, through which you can be notified when a new animation/interpolator has been selected.

--- a/Flubber/sample/src/main/res/values/colors.xml
+++ b/Flubber/sample/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#8bc34a</color>
-    <color name="colorPrimaryDark">#689f38</color>
+    <color name="colorPrimary">#673ab7</color>
+    <color name="colorPrimaryDark">#512da8</color>
     <color name="colorAccent">#00bcd4</color>
     <color name="main_animations_background">#F1F8E9</color>
-    <color name="color_editor_divider">#B2EBF2</color>
+    <color name="tab_indicator">#00BCD4</color>
 </resources>
