--- a/Flubber/sample/src/main/res/layout/list_item_animations.xml
+++ b/Flubber/sample/src/main/res/layout/list_item_animations.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -13,30 +15,34 @@
     </data>
 
 
-    <RelativeLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/white"
-        android:minHeight="80dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="5dp"
-        android:padding="3dp">
+        android:layout_height="80dp">
+
 
         <TextView
-            android:id="@+id/animationName"
-            android:layout_width="match_parent"
+            android:id="@+id/textViewAnimation"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{model.name}"/>
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="@{model.animation}"
+            android:textSize="16sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Animation"/>
 
         <TextView
-            android:id="@+id/animationProperties"
-            android:layout_width="match_parent"
+            android:id="@+id/textViewInterpolator"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/animationName"
-            android:text="TextView"/>
-    </RelativeLayout>
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
+            android:text="@{model.interpolator}"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewAnimation"
+            tools:text="Interpolator"/>
+    </android.support.constraint.ConstraintLayout>
 
 </layout>
