--- a/Flubber/sample/src/main/res/values/colors.xml
+++ b/Flubber/sample/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#00bcd4</color>
     <color name="main_animations_background">#F1F8E9</color>
     <color name="tab_indicator">#00BCD4</color>
+    <color name="colorText">#212121</color>
 </resources>
