--- a/Flubber/sample/src/main/res/layout/list_item_progress.xml
+++ b/Flubber/sample/src/main/res/layout/list_item_progress.xml
@@ -5,11 +5,13 @@
 
     <data>
 
-        <import type="com.appolica.sample.ui.editor.pager.settings.ListItemModel"/>
+        <import type="com.appolica.sample.utils.StringUtils"/>
+
+        <import type="com.appolica.sample.ui.editor.pager.settings.SeekBarModel"/>
 
         <variable
             name="model"
-            type="ListItemModel"/>
+            type="SeekBarModel"/>
 
     </data>
 
@@ -19,27 +21,19 @@
 
         <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
             android:id="@+id/discreteSeekBar"
-            android:layout_width="144dp"
-            android:layout_height="48dp"
-            app:dsb_min="0"
+            android:layout_width="0dp"
+            android:layout_height="32dp"
+            android:layout_marginEnd="64dp"
+            android:layout_marginRight="64dp"
+            app:model="@{model}"
             app:dsb_max="100"
+            app:dsb_min="0"
             app:dsb_scrubberHeight="2dp"
             app:dsb_trackHeight="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@+id/textView"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView"/>
-
-        <SeekBar
-            android:id="@+id/seekBar"
-            android:layout_width="144dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="@+id/textView"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
-            android:visibility="invisible"
-            app:value="@{model}"/>
 
         <TextView
             android:id="@+id/textView"
@@ -48,8 +42,7 @@
             android:layout_marginLeft="24dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
-
-            android:text="@{model.name}"
+            android:text="@{StringUtils.getCapitalizedString(model.name)}"
             android:textColor="@color/colorText"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
