--- a/Flubber/sample/src/main/res/layout/activity_main.xml
+++ b/Flubber/sample/src/main/res/layout/activity_main.xml
@@ -36,8 +36,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <FrameLayout
             android:id="@+id/editorPanelContainer"
