--- a/Flubber/sample/src/main/res/layout/fragment_editor_panel.xml
+++ b/Flubber/sample/src/main/res/layout/fragment_editor_panel.xml
@@ -6,8 +6,7 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/activity_editor"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabLayoutEdit"
