--- a/Flubber/sample/src/main/res/layout/list_item_progress.xml
+++ b/Flubber/sample/src/main/res/layout/list_item_progress.xml
@@ -23,17 +23,23 @@
             android:id="@+id/discreteSeekBar"
             android:layout_width="0dp"
             android:layout_height="32dp"
+            android:layout_marginBottom="24dp"
             android:layout_marginEnd="64dp"
             android:layout_marginRight="64dp"
-            app:model="@{model}"
+            android:layout_marginTop="0dp"
+            app:dsb_indicatorColor="@color/colorAccent"
             app:dsb_max="100"
             app:dsb_min="0"
+            app:dsb_progressColor="@color/colorAccent"
             app:dsb_scrubberHeight="2dp"
             app:dsb_trackHeight="2dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:dsb_trackColor="@color/colorSeekBarTrack"
+            app:layout_constraintBottom_toBottomOf="@+id/divider"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="@+id/textView"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView"/>
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:model="@{model}"/>
 
         <TextView
             android:id="@+id/textView"
@@ -46,5 +52,17 @@
             android:textColor="@color/colorText"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
+
+        <View
+            android:id="@+id/divider"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:layout_marginBottom="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:background="@color/divider"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
     </android.support.constraint.ConstraintLayout>
 </layout>
