--- a/Flubber/sample/src/main/res/layout/fragment_editor_page.xml
+++ b/Flubber/sample/src/main/res/layout/fragment_editor_page.xml
@@ -15,6 +15,8 @@
             android:id="@+id/recyclerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:paddingBottom="80dp"
+            android:clipToPadding="false"
             tools:listItem="@layout/list_item_radio"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
