--- a/Flubber/sample/src/main/res/layout/fragment_main_panel.xml
+++ b/Flubber/sample/src/main/res/layout/fragment_main_panel.xml
@@ -17,25 +17,13 @@
             android:id="@+id/recyclerViewAnimations"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewLabel"
             tools:listItem="@layout/list_item_animations"
-            tools:listitem="@layout/list_item_animations"/>
-
-        <TextView
-            android:id="@+id/textViewLabel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            android:text="@string/added_animations"
-            android:textColor="@color/colorAccent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            tools:listitem="@layout/list_item_animations"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="0dp"/>
 
 
     </android.support.constraint.ConstraintLayout>
