--- a/Flubber/sample/src/main/res/layout/list_item_animations.xml
+++ b/Flubber/sample/src/main/res/layout/list_item_animations.xml
@@ -8,7 +8,7 @@
 
         <import type="com.appolica.sample.ui.main.AnimationsListItemModel"/>
 
-        <import type="com.appolica.sample.ui.main.MainRVAdapter.OnItemClickListener"/>
+        <import type="com.appolica.sample.ui.main.fragment.MainRVAdapter.OnItemClickListener"/>
 
         <variable
             name="model"
