--- a/Flubber/sample/src/main/res/layout/list_item_animations.xml
+++ b/Flubber/sample/src/main/res/layout/list_item_animations.xml
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
-        android:onClick="@{() -> clickListener.onItemClicked(model)}">
+        android:onClick="@{() -> clickListener.onItemClicked(model.getAnimationBody())}">
 
         <TextView
             android:id="@+id/textViewAnimation"
