--- a/Flubber/sample/src/main/res/layout/activity_main.xml
+++ b/Flubber/sample/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     <data>
 
         <import type="com.appolica.sample.ui.main.activity.FabClickListener"/>
+
         <import type="com.appolica.sample.ui.main.FlubberClickListener"/>
 
         <variable
@@ -28,6 +29,46 @@
         android:layout_height="match_parent"
         tools:context="com.appolica.sample.ui.main.activity.MainActivity">
 
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="0dp"
+            android:background="@android:color/white"
+            android:elevation="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/guideline"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.415">
+
+            <TextView
+                android:id="@+id/animatedView"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/colorAccent"
+                android:gravity="center"
+                android:onClick="@{(view) -> flubberClickListener.onFlubberClick(view)}"
+                android:padding="20dp"
+                android:text="@string/flubber"
+                android:textColor="@android:color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.5"/>
+
+        </android.support.constraint.ConstraintLayout>
+
         <FrameLayout
             android:id="@+id/mainPanelContainer"
             android:layout_width="0dp"
@@ -49,12 +90,12 @@
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline"
-            android:layout_width="384dp"
+            android:layout_width="1dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="250dp"
             tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="250dp"/>
+            tools:layout_editor_absoluteY="331dp"/>
 
         <View
             android:id="@+id/revealView"
@@ -80,27 +121,6 @@
             app:fabSize="normal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
-
-        <TextView
-            android:id="@+id/animatedView"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:background="@color/colorAccent"
-            android:gravity="center"
-            android:onClick="@{(view) -> flubberClickListener.onFlubberClick(view)}"
-            android:padding="20dp"
-            android:text="@string/flubber"
-            android:textColor="@android:color/white"
-            app:layout_constraintBottom_toTopOf="@+id/guideline"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
 
     </android.support.constraint.ConstraintLayout>
 </layout>
