Migrate dependencies to AndroidX and add library to mavenCentral repo.

--- a/Flubber/demo/src/main/res/layout/fragment_main_panel.xml
+++ b/Flubber/demo/src/main/res/layout/fragment_main_panel.xml
@@ -7,13 +7,13 @@
 
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewAnimations"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -26,5 +26,5 @@
             android:layout_marginTop="0dp"/>
 
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
