--- a/Flubber/demo/src/main/res/layout/list_item_animations.xml
+++ b/Flubber/demo/src/main/res/layout/list_item_animations.xml
@@ -20,7 +20,7 @@
 
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
@@ -53,6 +53,6 @@
             app:layout_constraintTop_toBottomOf="@+id/textViewAnimation"
             app:layout_constraintVertical_bias="0.0"
             tools:text="Interpolator"/>
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
