--- a/Flubber/demo/src/main/res/layout/fragment_editor_panel.xml
+++ b/Flubber/demo/src/main/res/layout/fragment_editor_panel.xml
@@ -3,12 +3,12 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/activity_editor"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.design.widget.TabLayout
+        <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayoutEdit"
             android:layout_width="0dp"
             android:layout_height="48dp"
@@ -22,7 +22,7 @@
             app:tabIndicatorHeight="2dp"
             app:tabTextColor="@android:color/white"/>
 
-        <android.support.v4.view.ViewPager
+        <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPagerEdit"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -31,5 +31,5 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tabLayoutEdit"/>
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
